# DataStructures

./: CMakeLists.txt  Dockerfile  HOWTORUN.md  Makefile  docker-compose.yml  run.bat  simple_unit_tests.txt  structure functionalities.txt  structures to make.txt  test.cpp
Array/: array_list.cpp  array_list.hpp  custom_array.cpp  custom_array.hpp
List/: doubly_linked_list_struct.cpp  singly_linked_list.cpp  singly_linked_list.hpp  singly_list_node.cpp  singly_list_node.hpp
Map/: HashMap.hpp
Tree/: avl_tree.cpp  avl_tree.hpp  avl_tree_node.cpp  binary_tree.cpp  binary_tree.hpp  binary_tree_node.cpp
